syntax = "proto3";

option java_package = "com.iquantex.ts.cre.data.process.message.protobuf";

option java_outer_classname = "REDataCommonRef";

// 公共数据(利率、分类等)
message CommonRefData {
    double threeMonthRate = 1;

    double sixMonthRate = 2;

    double oneYearRate = 3;

    double twoYearRate = 4;

    double threeYearRate = 5;

    double fiveYearRate = 6;

    repeated BondClass bondClassList = 7;
}

message BondClass {
    string secClass = 1;

    string pareSecClass = 2;

    int32 classLevel = 3;
}
